--- a/index.html
+++ b/index.html
@@ -17,19 +17,12 @@
 <body>
   <section id="abstract" data-include-format="markdown" data-include="abstract.md"></section>
   <section id="sotd"></section><!-- Wordt automatisch gevuld -->
-  <script>
-    let content = "";
 
-    const getClass = function(key) {
-      if (respecConfig.content[key]!==""){return ` class="${respecConfig.content[key]}"`}
-    }
+  <!-- voeg hier je eigen hoofdstukken toe -->
+  <section data-include-format="markdown" data-include="ch01.md" class="informative"></section>
+  <section data-include-format="markdown" data-include="ch02.md"></section>
+  <section data-include-format="markdown" data-include="mermaid.md"></section>
 
-    for (let contentKey in respecConfig.content) {
-      content += `<section data-include-format="markdown" data-include="${contentKey}.md" ${getClass(contentKey)||""}></section>`
-    }
-
-    document.getElementById("sotd").insertAdjacentHTML('afterend', content);
-  </script>
   <section id='conformance'></section>
   <section id='tof'></section>
   <section id="index"></section>
