--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <section id="abstract" data-include-format="markdown" data-include="abstract.md"></section>
   <section id="sotd"></section><!-- Wordt automatisch gevuld -->
 
-  <!-- voeg hier je eigen hoofdstukken toe -->
+  <!-- TODO: voeg hier je eigen hoofdstukken toe -->
   <section data-include-format="markdown" data-include="ch01.md" class="informative"></section>
   <section data-include-format="markdown" data-include="ch02.md"></section>
   <section data-include-format="markdown" data-include="mermaid.md"></section>
