--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
   <section data-include-format="markdown" data-include="ch02.md"></section>
   <section data-include-format="markdown" data-include="mermaid.md"></section>
 
+  <!-- Als je document een door imvertor gegenereerde catalogus bevat kan je die -->
+  <!-- opnemen door de volgende regel uit commentaarhaakjes te halen en aan te passen -->
+  <!-- <div id="catalogus" data-include="data/TODO-cat.respec.html" data-include-replace=true></div> -->
+
   <section id='conformance'></section>
   <section id='tof'></section>
   <section id="index"></section>
