opgenomen dat conformance hoofstuk optioneel is closes #7

--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
   <!-- opnemen door de volgende regel uit commentaarhaakjes te halen en aan te passen -->
   <!-- <div id="catalogus" data-include="data/TODO-cat.respec.html" data-include-replace=true></div> -->
 
-  <section id='conformance'></section>
-  <section id='tof'></section>
-  <section id="index"></section>
+  <!-- De volgende paragrafen worden automatisch gevuld. Je kunt ze uitzetten -->
+  <section id='conformance'></section> <!-- Gegeneerd hoofdstuk over conformiteit-->
+  <section id='tof'></section><!-- Lijst van figuren -->
+  <section id="index"></section><!-- Lijst van begrippen -->
 </body>
 
 </html>
