--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
   <script src="https://tools.geostandaarden.nl/respec/config/geonovum-config.js" class="remove"></script>
   <script src="js/config.js" class="remove"></script>
   <script class="remove">
-    respecConfig.localBiblio = Object.assign(organisationConfig.localBiblio,respecConfig.localBiblio);
-    respecConfig = {...organisationConfig, ...respecConfig};
+    const mergedLocalBiblio = {
+    ...organisationConfig.localBiblio,
+    ...documentConfig.localBiblio
+  };
+  respecConfig = {
+    ...organisationConfig,
+    ...documentConfig,
+    localBiblio: mergedLocalBiblio
+  };
   </script>
   <script>document.title = respecConfig.title</script>
   <title>TODO: Vul hier de titel in</title>
