--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <script class="remove">
     const mergedLocalBiblio = {
     ...organisationConfig.localBiblio,
-    ...documentConfig.localBiblio
+    ...respecConfig.localBiblio
   };
   respecConfig = {
     ...organisationConfig,
-    ...documentConfig,
+    ...respecConfig,
     localBiblio: mergedLocalBiblio
   };
   </script>
